--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.swufe.newlife">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
@@ -11,16 +13,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".EatActivity" />
-        <activity android:name=".FrameActicity">
-        </activity>
-        <activity android:name=".ViewActivity"></activity>
+        <activity android:name=".FrameActicity" />
+        <activity android:name=".ViewActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".TvActivity" />
+        <activity android:name=".TvseriesActivity" />
+        <activity android:name=".QueActivity" />
+        <activity android:name=".GeQianActivity" />
+        <activity android:name=".PasswordActivity"></activity>
     </application>
 
 </manifest>
