最后修改，增加了电视剧网络获取数据和记录的部分

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,14 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".TvseriesActivity"  />
+        <activity android:name=".TvseriesActivity">
+
+        </activity>
         <activity android:name=".QueActivity" />
         <activity android:name=".GeQianActivity" />
-        <activity android:name=".PasswordActivity"></activity>
+        <activity android:name=".PasswordActivity" />
+        <activity android:name=".VideoActivity" />
+        <activity android:name=".RecordActivity"></activity>
     </application>
 
 </manifest>
